Fixes for forms, responsive, scrollbars and page paddings

--- a/src/pages/Contact/contact.scss
+++ b/src/pages/Contact/contact.scss
@@ -15,10 +15,9 @@ input, select, textarea {
   resize: none;
   padding: 10px;
   border-radius: 5px;
-  box-sizing:content-box;
-  width: 90%;
+  box-sizing: border-box;
+  width: 100%;
   @include mq('tablet-wide') {
-    width: 100%;
   }
   &::placeholder {
     color: rgba($white, 0.3);
@@ -30,12 +29,13 @@ input, select, textarea {
 }
 
 select {
+  padding: 0;
   height: 25px;
-  width: 90%;
-  @include mq('tablet-wide') {
-    border: 10px solid transparent;
-    width: 100%;
-  }
+  width: 100%;
+  box-sizing: content-box;
+  border: 10px solid transparent;
+  border-right-width: 0;
+  border-left-width: 0;
 }
 
 .button-svg {
@@ -49,7 +49,8 @@ button {
   color: $white;
   font-size: $font-medium;
   border-radius: 5px;
-  width: 100px;
+  float: right;
+  width: 100%;
   padding: 8px;
   &:not(:disabled):hover {
     cursor: pointer;
@@ -72,6 +73,9 @@ button {
   }
   &.sent {
     border-color: green;
+  }
+  @include mq('tablet') {
+    width: 150px;
   }
 }
 
